--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body>
+<body class="bg-[#F0FDF4]">
     <nav>
         <div class="main-nav bg-[#15803D] w-full h-18 flex justify-between items-center px-20">
             <div class="logo">
@@ -33,9 +33,9 @@
                 <h1 class="text-center text-[38px] text-[#1F2937] font-bold">Plant a Tree, Grow a Future</h1>
                 <p class="text-[15px]">Join our mission to plant 1 million trees and make the Earth greener for future
                     generations.</p>
-                   <div class="btn mt-4">
-                <button class="btn1 bg-[#FACC15] text-[#15803D] px-3 py-2 rounded-[30px]">Get Involved</button>
-            </div>
+                <div class="btn mt-4">
+                    <button class="btn1 bg-[#FACC15] text-[#15803D] px-3 py-2 rounded-[30px]">Get Involved</button>
+                </div>
 
             </div>
             <div class="leaf-right">
@@ -43,8 +43,77 @@
 
             </div>
         </div>
-        
+        <div class="about h-[80vh] w-[50%] justify-center items-center flex flex-col gap-10 mx-auto my-20">
+            <div class="heading">
+                <h1 class="text-[#1F2937] text-[28px] font-bold">About The Campaign</h1>
+            </div>
+            <div class="content flex gap-6 fle">
+                <div class="img w-[50%]">
+                    <img class="h-full" src="assets/about.png" alt="">
+                </div>
+                <div class="contennt w-[50%] flex flex-col justify-center gap-4">
+                    <p>Green Earth is a global tree plantation initiative dedicated to fighting climate change. Since
+                        our start, we've planted over 500,000 trees worldwide. By joining our campaign, you help restore
+                        forests, create habitats for wildlife, and combat global warming.</p>
+                    <ul class="list-disk  pl-2">
+                        <li class="list-disk  1">Restoration of natural habitats</li>
+                        <li>Improvement of air quality</li>
+                        <li>Support for local communities</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="our-impact py-16 w-full h-[50vh] bg-[#CFF0DC] flex flex-col justify-center items-center gap-10 ">
+            <div class="heading">
+                <h1 class="text-[#1F2937] text-[28px] font-bold">Our Impact</h1>
+            </div>
+            <div class="content w-full px-16 flex gap-6">
+                <div class="card1 text-center bg-white w-[33%] h-[110px] flex flex-col justify-center items-center">
+                    <h1 class="text-[#15803D] text-[32px] font-bold">500K+</h1>
+                    <span class="text-[# text-[16px] font-light">Trees Saved</span>
+                </div>
+                <div class="card1 text-center bg-white w-[33%] h-[110px] flex flex-col justify-center items-center">
+                    <h1 class="text-[#15803D] text-[32px] font-bold">120+</h1>
+                    <span class="text-[# text-[16px] font-light">Communities Involved</span>
+                </div>
+                <div class="card1 text-center bg-white w-[33%] h-[110px] flex flex-col justify-center items-center">
+                    <h1 class="text-[#15803D] text-[32px] font-bold">30+</h1>
+                    <span class="text-[# text-[16px] font-light">Countries Reached</span>
+                </div>
+
+            </div>
+        </div>
+        <div class="form  bg-[#166534] flex flex-col justify-center items-center h-[80vh]">
+            <div class="headin text-white text-[28px] font-bold mb-6">
+                Plant a Tree Today
+            </div>
+            <div class="form-content bg-[#15803D] w-[40%] h-[60%] flex flex-col justify-center items-center">
+                <input type="text" placeholder="Your Name"
+                    class="w-[90%] text-[18px]  h-[55px] rounded-md bg-white mb-4 px-3">
+                <input type="text" placeholder="Your Name"
+                    class="w-[90%] text-[18px]  h-[55px] rounded-md bg-white mb-4 px-3">
+                <select name="" id="" class="w-[90%] text-[18px]  h-[50px] rounded-md bg-white mb-2 px-3">
+                    <option value="">Number of Trees</option>
+                    <option value="">1</option>
+                    <option value="">5</option>
+                    <option value="">10</option>
+                    <option value="">15</option>
+                    <option value="">20</option>
+                </select>
+                <div class="btn  mt-4"></div>
+                    <button class="btn1 w-[90%] text-xl font-semibold bg-[#FACC15] text-[#15803D] px-3 py-2 rounded-[30px]">Donate Now</button>
+                </div>
+               
+
+            </div>
+
+        </div>
     </main>
+    <footer>
+        <div class="footer-content bg-[#14532D] w-full h-[10vh] flex justify-center items-center">
+            <span class="text-white text-[16px]">© 2024 Green Earth. All rights reserved.</span>
+        </div>
+    </footer>
 
 </body>
 <script src="app.js"></script>
