--- a/index.html
+++ b/index.html
@@ -25,22 +25,54 @@
         </div>
     </nav>
     <main>
-        <div class="hero bg-[#CFF0DC] w-full h-[400] gap-12 flex justify-between items-center px-2 ">
+        <div class="hero bg-[#CFF0DC] w-full h-[400] gap- flex justify-between items-center p ">
             <div class="leaf-left">
                 <img src="assets/hero-leaf1.png" alt="">
             </div>
             <div class="main text-center flex flex-col gap-1">
                 <h1 class="text-center text-[38px] text-[#1F2937] font-bold">Plant a Tree, Grow a Future</h1>
-                <p class="text-[15px]">Join our mission to plant 1 million trees and make the Earth greener for future
+                <p class="text-[15px] font-light">Join our mission to plant 1 million trees and make the Earth greener
+                    for future
                     generations.</p>
                 <div class="btn mt-4">
-                    <button class="btn1 bg-[#FACC15] text-[#15803D] px-3 py-2 rounded-[30px]">Get Involved</button>
+                    <button class="btn1 bg-[#FACC15] text-[#15803D] font-semibold px-3 py-2 rounded-[30px]">Get
+                        Involved</button>
                 </div>
 
             </div>
             <div class="leaf-right">
                 <img src="assets/hero-leaf2.png" alt="">
 
+            </div>
+        </div>
+        <div class="trees h-[100vh] w-full flex flex-col mt-4  items-center  gap- px-5 ">
+            <div class="heading">
+                <h1 class="text-[#1F2937] text-[28px] font-bold">Choose Your Trees</h1>
+            </div>
+
+            <div class="wrapper w-full h-full flex flex-col gap-10">
+
+                <div class="category w-[20%] h-full">
+                    <h1 class="text-[22px] text-[#1F2937] font-bold">Category</h1>
+
+                    <ul class="flex flex-col gap-4 mt-2">
+                        <li class="text-[16px] bg-[#15803D] py-1 duration-[0.2s] text-white cursor-pointer px-3 rounded-[5px] ">All Trees</li>
+                        <li class="text-[16px] hover:bg-[#15803D] py-1 duration-[0.2s] hover:text-white cursor-pointer px-3 rounded-[5px] ">Fruit Trees</li>
+                        <li class="text-[16px] hover:bg-[#15803D] py-1 duration-[0.2s] hover:text-white cursor-pointer px-3 rounded-[5px] ">Fruit Trees</li>
+                        <li class="text-[16px] hover:bg-[#15803D] py-1 duration-[0.2s] hover:text-white cursor-pointer px-3 rounded-[5px] ">Fruit Trees</li>
+                        <li class="text-[16px] hover:bg-[#15803D] py-1 duration-[0.2s] hover:text-white cursor-pointer px-3 rounded-[5px] ">Fruit Trees</li>
+                        <li class="text-[16px] hover:bg-[#15803D] py-1 duration-[0.2s] hover:text-white cursor-pointer px-3 rounded-[5px] ">Fruit Trees</li>
+                        <li class="text-[16px] hover:bg-[#15803D] py-1 duration-[0.2s] hover:text-white cursor-pointer px-3 rounded-[5px] ">Fruit Trees</li>
+                        <li class="text-[16px] hover:bg-[#15803D] py-1 duration-[0.2s] hover:text-white cursor-pointer px-3 rounded-[5px] ">Fruit Trees</li>
+                        <li class="text-[16px] hover:bg-[#15803D] py-1 duration-[0.2s] hover:text-white cursor-pointer px-3 rounded-[5px] ">Fruit Trees</li>
+                    </ul>
+                </div>
+                <div class="tree-cards">
+
+                </div>
+                <div class="cart">
+
+                </div>
             </div>
         </div>
         <div class="about h-[80vh] w-[50%] justify-center items-center flex flex-col gap-10 mx-auto my-20">
@@ -68,15 +100,18 @@
                 <h1 class="text-[#1F2937] text-[28px] font-bold">Our Impact</h1>
             </div>
             <div class="content w-full px-16 flex gap-6">
-                <div class="card1 text-center bg-white w-[33%] h-[110px] flex flex-col justify-center items-center">
+                <div
+                    class="card1 rounded-[10px] text-center bg-white w-[33%] h-[110px] flex flex-col justify-center items-center">
                     <h1 class="text-[#15803D] text-[32px] font-bold">500K+</h1>
                     <span class="text-[# text-[16px] font-light">Trees Saved</span>
                 </div>
-                <div class="card1 text-center bg-white w-[33%] h-[110px] flex flex-col justify-center items-center">
+                <div
+                    class="card1 rounded-[10px] text-center bg-white w-[33%] h-[110px] flex flex-col justify-center items-center">
                     <h1 class="text-[#15803D] text-[32px] font-bold">120+</h1>
                     <span class="text-[# text-[16px] font-light">Communities Involved</span>
                 </div>
-                <div class="card1 text-center bg-white w-[33%] h-[110px] flex flex-col justify-center items-center">
+                <div
+                    class="card1 rounded-[10px] text-center bg-white w-[33%] h-[110px] flex flex-col justify-center items-center">
                     <h1 class="text-[#15803D] text-[32px] font-bold">30+</h1>
                     <span class="text-[# text-[16px] font-light">Countries Reached</span>
                 </div>
@@ -101,11 +136,13 @@
                     <option value="">20</option>
                 </select>
                 <div class="btn  mt-4"></div>
-                    <button class="btn1 w-[90%] text-xl font-semibold bg-[#FACC15] text-[#15803D] px-3 py-2 rounded-[30px]">Donate Now</button>
-                </div>
-               
-
+                <button
+                    class="btn1 w-[90%] text-xl font-semibold bg-[#FACC15] text-[#15803D] px-3 py-2 rounded-[30px]">Donate
+                    Now</button>
             </div>
+
+
+        </div>
 
         </div>
     </main>
